# tgfp-lib

./: .gitignore  .pylintrc  Dockerfile-Dev  README.md  bump_version_and_publish.sh  create_dev_env.sh  dev-docker-compose.yaml  dev_requirements.txt  docker-compose-dev.yaml  docker-compose-tst.yaml  op.env  pyproject.toml  requirements.txt  setup.py  stack.env
.run/: Docker Compose_ Dev.run.xml  Docker Compose_ Test.run.xml  Doppler change to 'tst'.run.xml  Doppler_ Change to 'dev'.run.xml  Doppler_ Change to 'prd'.run.xml  Doppler_ Change to 'tst'.run.xml  Doppler_ Create 'dev'  .env.run.xml  Doppler_ Create 'tst'  .env.run.xml  Poetry Publish.run.xml  Python tests in tests.run.xml  pytest in test_tgfp.py.run.xml  pytest in test_tgfp_clan.py.run.xml  pytest in test_tgfp_player.py.run.xml  pytest in test_tgfp_team.py.run.xml  pytest in tests.run.xml
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4707024398885946931.wt  collection-0-5714483562274829014.wt  collection-1--4707024398885946931.wt  collection-10--4707024398885946931.wt  collection-2--4707024398885946931.wt  collection-2-5714483562274829014.wt  collection-3--4707024398885946931.wt  collection-4-5714483562274829014.wt  collection-7-5714483562274829014.wt  collection-8--4707024398885946931.wt  index-1-5714483562274829014.wt  index-11--4707024398885946931.wt  index-3-5714483562274829014.wt  index-4--4707024398885946931.wt  index-5--4707024398885946931.wt  index-5-5714483562274829014.wt  index-6--4707024398885946931.wt  index-6-5714483562274829014.wt  index-7--4707024398885946931.wt  (+4 more)
(+328 files in other folders)
