[tool.poetry]
name = "tgfp-lib"
version = "1.5.0"
description = "The Great Football Pool Project"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.2.1"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
pytest = "^7.1.2"
doppler-env = "^0.3.0"
pytest-mock = "^3.8.2"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
