[tool.poetry]
name = "tgfp-lib"
version = "2.3.0"
description = "The Great Football Pool Project"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pytz = "^2023.3.post1"
pymongo = "^4.6.0"
beanie = "^1.23.6"
pylint = "^3.0.2"
prefect = "^2.14.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
doppler-env = "^0.3.1"
pytest-mock = "^3.12.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
